@@ -15,6 +15,10 @@
    * Added enumerations for return codes, new PBE solver (SMPBE) and linear/
      nonlinear types
    * Added in code for Size-Modified PBE (SMPBE)
+   * Added support for chain IDs in noinput.py
+- BUG FIXES
+   * Fixed bug in noinput.py where REMARK lines would cause the script to fail.
+
 #############################################################################
 BETA PUBLIC RELEASE VERSION 0.5.0       Jan-2007
 #############################################################################
